--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -28,38 +28,39 @@
         <h1>CONCEPT</h1>
         <p>DIC Coffee's commitment</p>
         </div>
-        <div class="left">
-        <p>
+        <div class="concept_inside">
+        <p class="concept_paragraph">
           DIC Coffee's coffee uses coffee beans<strong>「DIC Beans」</strong>from Rwanda<br>
           We purchase from coffee farmers who have a direct contract. <br>
-          It is a cup that you can feel the fruity sweetness with the balanced acidity and richness. <br> By all means, have a special cup
+          It is a cup that you can feel the fruity sweetness with the balanced acidity and richness. By all means, have a special cup
           Please enjoy. <br>
           <small> Cafe is operated by DIVE INTO CODE Co., Ltd. under contract with the farm. </small>
-        </div>
         </p>
-        <div class="right">
-        <img src="images/sample_concept.jpg" height="350px" width="35%"> 
+        <img src="images/sample_concept.jpg" class="concept_img">
         </div>
       </article>
-      <section class="back_img">
-      <article class="section_inner" >
+      <article class=" menu section_inner" >
         <h1 class="section_title">MENU</h1>
         <section>
           <div class="center">
           <h1 class="menu_title">Recommended menu</h1>
           </div>
-          <ul>
-              <li>
-                  <h2>Blueberry pancakes</h2>
+          <ul class="menu_list recommended_menu_list">
+              <li class="pancake_menu">
+                <div class="pancake_menu_content">
+                  <h2 class="pancake_title">Blueberry pancakes</h2>
                   <p>A pancake topped with fresh blueberries</p>
-                  <p>¥1,200</p>
-                  <img src="images/sample_pancake1.jpg">
+                  <p class="pancake_menu_price">¥1,200</p>
+                </div>
+                  <img src="images/sample_pancake1.jpg" class="pancake_menu_image">
               </li>
-              <li>
-                  <h2>Strawberry pancakes</h2>
+              <li class="pancake_menu">
+                <div class="pancake_menu_content">
+                  <h2 class="pancake_title">Strawberry pancakes</h2>
                   <p>Enjoy the collaboration between strawberries and honey</p>
-                  <p>¥1,300</p>
-                  <img src="images/sample_pancake2.jpg">
+                  <p class="pancake_menu_price">¥1,300</p>
+                  </div>
+                  <img src="images/sample_pancake2.jpg" class="pancake_menu_image">
               </li>
           </ul>
         </section>
@@ -68,25 +69,33 @@
           <div class="center">
           <h1 class="menu_title">Coffee menu</h1>
           </div>
-          <ul>
-              <li>
-                  <h2>Blended coffee</h2>
-                  <p>¥400</p>
+          <ul class="coffee_menu menu_list">
+              <li class="coffee_menu_list_item">
+                <div class="coffee_menu_content">
+                 <h2 class="menu_item_title">Blended coffee</h2>
+                  <p class="coffee_price">¥400</p>
+                </div>
                   <img src="images/sample_cafe1.jpg" class="coffee_menu_image">
               </li>
-              <li>
-                  <h2>Art latte</h2>
-                  <p>¥500</p>
+              <li class="coffee_menu_list_item">
+                <div class="coffee_menu_content">
+                  <h2 class="menu_item_title">Art latte</h2>
+                  <p class="coffee_price">¥500</p>
+                </div>
                   <img src="images/sample_cafe2.jpg" class="coffee_menu_image">
-              </li>
-              <li>
-                <h2>Cafe latte</h2>
-                <p>¥450</p>
+              </li> 
+              <li class="coffee_menu_list_item">
+                <div class="coffee_menu_content">
+                <h2 class="menu_item_title">Cafe latte</h2>
+                <p class="coffee_price">¥450</p>
+                </div>
                 <img src="images/sample_cafe3.jpg" class="coffee_menu_image">
               </li>
-              <li>
-                <h2>Ice coffee</h2>
-                <p>¥350</p>
+              <li class="coffee_menu_list_item">
+                <div class="coffee_menu_content">
+                <h2 class="menu_item_title">Ice coffee</h2>
+                <p class="coffee_price">¥350</p>
+                </div>
                 <img src="images/sample_cafe4.jpg" class="coffee_menu_image">
               </li>
           </ul>
@@ -97,32 +106,37 @@
         <h1>ACCESS</h1>
         <p>Store information</p>
         </div>
-        <dl>
-            <dt>Business Hours</dt>
+        <dl class="info">
+            <dt class="info_title">Business Hours</dt>
             <dd>10:00 - 19:00 <br> Closed on Thursday</dd>
         </dl>
-        <dl>
-            <dt>Address</dt>
+        <dl class="info_section">
+            <dt class="info_section_title">Address</dt>
             <dd>
                 Oba Building A, 28-4 Maruyama-cho, Shibuya-ku, Tokyo 150-0044<br>
               TEL:03-5459-1808
             </dd>
           </dl>
+          <div class="frame_area">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8625569899887!2d139.6922821152582!3d35.65575778020021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b55bb707eff%3A0x5f04575eb7aca63e!2z44CSMTUwLTAwNDQg5p2x5Lqs6YO95riL6LC35Yy65YaG5bGx55S677yS77yY4oiS77yUIE9iYSBCbGQuIEHppKg!5e0!3m2!1sja!2sjp!4v1589613763992!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8625569899887!2d139.6922821152582!3d35.65575778020021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b55bb707eff%3A0x5f04575eb7aca63e!2z44CSMTUwLTAwNDQg5p2x5Lqs6YO95riL6LC35Yy65YaG5bGx55S677yS77yY4oiS77yUIE9iYSBCbGQuIEHppKg!5e0!3m2!1sja!2sjp!4v1589613763992!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      </article>
+        </div>
+        </article>
     </section> 
-    <footer>
+    <footer class="footer">
       <nav>
-        <ul>
-          <a href="index.html"><li>Home</li></a>
-          <a href="#"><li>Menu</li></a>
-          <a href="contact.html"><li>Contact</li></a>
-        </ul>
+        <ul class="footer_nav">
+          <a href="index.html" class="footer_nav_item"><li>Home</li></a>
+          <a href="#" class="footer_nav_item"><li>Menu</li></a>
+          <a href="contact.html" class="footer_nav_item"><li>Contact</li></a>
+        
         <a href="index.html">
-          <img src="images/sample_logo_w.png">
+          <li>
+          <img src="images/sample_logo_w.png" class="footer_logo">
+          </li>
         </a>
-        <span>&copy; DIVE INTO CODE Corp. All RIGHTS RESERVED.</span>
-      </nav> 
+        </ul>
+      </nav>
+        <p class="footer_right">© DIVE INTO CODE Corp. All RIGHTS RESERVED.</p>
     </footer>
   </body>
 </html>
