--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
               </li>
           </ul>
         </section>
-      </section>
-        <section>
-          <div class="center">
+         <div class="center">
           <h1 class="menu_title">Coffee menu</h1>
           </div>
           <ul class="coffee_menu menu_list">
@@ -83,7 +81,21 @@
                   <p class="coffee_price">¥500</p>
                 </div>
                   <img src="images/sample_cafe2.jpg" class="coffee_menu_image">
-              </li> 
+              </li>
+              <li class="coffee_menu_list_item">
+                <div class="coffee_menu_content">
+                <h2 class="menu_item_title">Cafe latte</h2>
+                <p class="coffee_price">¥450</p>
+                </div>
+                <img src="images/sample_cafe3.jpg" class="coffee_menu_image">
+              </li>
+              <li class="coffee_menu_list_item">
+              <div class="coffee_menu_content">
+                  <h2 class="menu_item_title">Art latte</h2>
+                  <p class="coffee_price">¥500</p>
+                </div>
+                  <img src="images/sample_cafe2.jpg" class="coffee_menu_image">
+              </li>
               <li class="coffee_menu_list_item">
                 <div class="coffee_menu_content">
                 <h2 class="menu_item_title">Cafe latte</h2>
@@ -99,8 +111,8 @@
                 <img src="images/sample_cafe4.jpg" class="coffee_menu_image">
               </li>
           </ul>
-        </section>
       </article>
+      </section>
       <article class="section_inner">
         <div class=section_title>
         <h1>ACCESS</h1>
@@ -118,25 +130,20 @@
             </dd>
           </dl>
           <div class="frame_area">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8625569899887!2d139.6922821152582!3d35.65575778020021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b55bb707eff%3A0x5f04575eb7aca63e!2z44CSMTUwLTAwNDQg5p2x5Lqs6YO95riL6LC35Yy65YaG5bGx55S677yS77yY4oiS77yUIE9iYSBCbGQuIEHppKg!5e0!3m2!1sja!2sjp!4v1589613763992!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8625569899887!2d139.6922821152582!3d35.65575778020021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b55bb707eff%3A0x5f04575eb7aca63e!2z44CSMTUwLTAwNDQg5p2x5Lqs6YO95riL6LC35Yy65YaG5bGx55S677yS77yY4oiS77yUIE9iYSBCbGQuIEHppKg!5e0!3m2!1sja!2sjp!4v1589613763992!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8625569899887!2d139.6922821152582!3d35.65575778020021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b55bb707eff%3A0x5f04575eb7aca63e!2z44CSMTUwLTAwNDQg5p2x5Lqs6YO95riL6LC35Yy65YaG5bGx55S677yS77yY4oiS77yUIE9iYSBCbGQuIEHppKg!5e0!3m2!1sja!2sjp!4v1589613763992!5m2!1sja!2sjp" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         </article>
-    </section> 
+    </section>
     <footer class="footer">
       <nav>
         <ul class="footer_nav">
-          <a href="index.html" class="footer_nav_item"><li>Home</li></a>
-          <a href="#" class="footer_nav_item"><li>Menu</li></a>
-          <a href="contact.html" class="footer_nav_item"><li>Contact</li></a>
-        
-        <a href="index.html">
-          <li>
-          <img src="images/sample_logo_w.png" class="footer_logo">
-          </li>
-        </a>
+          <a href="index.html" class="footer_nav_item"><li>. Home</li></a>
+          <a href="#" class="footer_nav_item"><li>. Menu</li></a>
+          <a href="contact.html" class="footer_nav_item"><li>. Contact</li></a>
+          <a href="index.html">.<img src="images/sample_logo_w.png" class="footer_logo"></a>
         </ul>
       </nav>
-        <p class="footer_right">© DIVE INTO CODE Corp. All RIGHTS RESERVED.</p>
+        <p class="footer_right">©️ DIVE INTO CODE Corp. All RIGHTS RESERVED.</p>
     </footer>
   </body>
 </html>
